<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".AboutActivity"
    android:layout_margin="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:id="@+id/layout"
    android:orientation="vertical">


    <ImageView
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/icon"
        tools:ignore="ContentDescription" />

    <TextView
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/dear_creators"/>


    <TextView
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/all_meme_pages_social_sites_are_copyright_of_their_perspective_owners_any_request_to_remove_meme_pages_social_sites_from_our_application_will_be_honoured"
        />


    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end">

        <TextView
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/yours_lovely"/>

        <TextView
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/imsai_arasan"
            tools:ignore="SmallSp" />

    </LinearLayout>



    <TextView
        android:gravity="center"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/black"
        android:id="@+id/privacyPolicy"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:textSize="15sp"
        android:text="@string/privacy_policy"
        tools:ignore="UnusedAttribute" />


</LinearLayout>