<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    app:cardElevation="30dp"
    android:layout_margin="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_sure_you_want_to_exit"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:contentDescription="@string/btn_cancel"
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/close" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:contentDescription="@string/btn_done"
                android:layout_marginStart="50dp"
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/done" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>