<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    app:cardElevation="30dp"
    android:layout_margin="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/cn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/what_would_you_like_to_do"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:contentDescription="@string/btn_save"
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/save" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:contentDescription="@string/btn_share"
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/share" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>